--- a/style.css
+++ b/style.css
@@ -1,60 +1,282 @@
-body{
-    margin: 0;
+/* -----------import google font 'Work Sans'----------- */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Work+Sans&display=swap');
+
+body {
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
+
+section {
+    margin: 50px 5%;
+}
+
+.sect-title {
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+p {
+    color: #727272;
+}
+
+.btn-primary {
+    padding: 12px;
+    background-color: #FF900E;
+    border-radius: 8px;
+    border: 0;
+    color: white;
+    font-weight: 600;
+}
+
+/* -------------Header-------------- */
 header {
     background-color: rgba(255, 144, 14, 0.1);
 }
 
-nav,
-section {
-    margin: 50px, 5%;
-}
+/* --------Nav Bar-------------- */
 
 nav {
+    margin: 0 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .nav-brand {
-    font-size: 45px;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 800;
 }
 
 .nav-links {
     display: flex;
     align-items: center;
-}
-.nav-links a{
-    text-decoration: none;
-}
-p{
-    color: #727272;
-}
-.btn-primary {
-    padding: 10px;
-    background-color: #FF900E;
-    border-radius: 8px;
+    gap: 20px;
 }
 
-.banner-text{
+.nav-links a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    color: #424242;
+}
+
+@media only screen and (max-width:576px) {
+    nav {
+        flex-direction: column;
+    }
+
+    .nav-links {
+        flex-direction: column;
+    }
+}
+
+/* ----------Banner--------- */
+
+.banner-title {
+    font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.banner-text {
     text-align: center;
 }
-.banner-img img{
+
+.banner-img {
+    padding: 50px 5%;
+}
+
+.banner-img img {
     width: 100%;
 }
 
-.quick-list{
-    display: flex;
-}
-.quick-list .images{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+@media only screen and (max-width:576px) {
+    .banner-title {
+        font-size: 2.8rem;
+    }
 }
 
-.features-flex-items{
+/* -----------------Quick List Section---------- */
+.quick-list {
     display: flex;
     gap: 30px;
+    align-items: center;
+}
+
+.quick-list .item {
+    flex: 1;
+}
+
+.quick-list .images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.quick-list .images img {
+    width: 100%;
+}
+
+.quick-list .text-gray {
+    color: #727272
+}
+
+.quick-list .text-orange {
+    color: #FF900E;
+}
+
+@media only screen and (max-width:576px) {
+    .quick-list {
+        flex-direction: column;
+    }
+
+    .quick-list .images {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* ---------------Features Section--------------- */
+.features {
+    position: relative;
+}
+
+.features-flex-items {
+    display: flex;
+    gap: 30px;
+}
+
+.features .features-flex-items .item {
+    flex: 1;
+}
+
+.features .sect-title {
+    border-left: 4px solid #FF900E;
+    padding-left: 10px;
+}
+
+.features .item img {
+    width: 100%;
+}
+
+.feature-card {
+    padding: 20px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+}
+
+.btn-primary.feature-btn {
+    padding: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateY(-50%, -50%);
+}
+
+.fs-biger {
+    font-size: 3rem;
+    display: block;
+}
+
+.fs-big {
+    font-size: 1.3rem;
+}
+
+@media only screen and (max-width:576px) {
+    .features-flex-items {
+        flex-direction: column;
+    }
+
+    .btn-primary.feature-btn {
+        display: block;
+        margin: 30px auto;
+        position: static;
+    }
+}
+
+/* ---------------Some Facts Section--------------- */
+
+.fact-cards {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fact-card {
+    flex: 1;
+    width: fit-content;
+    margin: 10px 30px;
+    padding: 20px 0;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+}
+
+.fact-card:hover{
+    transform: rotate(20deg);
+    box-shadow: 0 0 5px 2px #FF900E;
+}
+.fact-card>* {
+    display: block;
+    text-align: center;
+    margin: auto;
+}
+
+.number {
+    font-size: 2rem;
+    font-weight: bolder;
+    margin: 10px 0;
+}
+
+.name {
+    font-size: 1rem;
+    font-weight: bolder;
+}
+
+@media only screen and (max-width:576px) {
+    .fact-cards {
+        flex-direction: column;
+    }
+}
+
+/* ---------------Sponsors Section--------------- */
+
+.sponsor .sect-title {
+    text-align: center;
+}
+
+.sponsor .sect-title+p {
+    text-align: center;
+}
+
+.sponsor-icons {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+
+.sponsor-icons img {
+    filter: grayscale(100%);
+}
+
+@media only screen and (max-width:576px) {
+    .sponsor-icons {
+        flex-direction: column;
+    }
+}
+
+/* ------------------Footer--------------------- */
+
+footer {
+    margin: 150px 5%;
+    padding: 30px;
+    background-color: rgba(255, 144, 14, 0.1);
+    color: #424242;
+    text-align: center;
+    font-size: 20px;
 }
