--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* -----------import google font 'Work Sans'----------- */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Work+Sans&display=swap');
 
+/* -------------import bootsrap icons-------------- */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 body {
     max-width: 1440px;
     margin: 0 auto;
@@ -215,10 +218,11 @@ nav {
     border-radius: 8px;
 }
 
-.fact-card:hover{
+.fact-card:hover {
     transform: rotate(20deg);
     box-shadow: 0 0 5px 2px #FF900E;
 }
+
 .fact-card>* {
     display: block;
     text-align: center;
@@ -238,6 +242,42 @@ nav {
 
 @media only screen and (max-width:576px) {
     .fact-cards {
+        flex-direction: column;
+    }
+
+    .fact-card {
+        padding: 30px;
+    }
+}
+
+/* ---------------Client Review Section--------------- */
+.client-review .sect-title {
+    text-align: center;
+}
+
+.client-review .sect-title+p {
+    text-align: center;
+}
+
+.review-container {
+    display: flex;
+    gap: 30px;
+}
+
+.review {
+    text-align: center;
+    padding: 20px;
+    background-color: #757272;
+    border-radius: 8px;
+    color: white;
+}
+
+.review p {
+    color: white;
+}
+
+@media only screen and (max-width:576px) {
+    .review-container {
         flex-direction: column;
     }
 }
@@ -273,10 +313,9 @@ nav {
 /* ------------------Footer--------------------- */
 
 footer {
-    margin: 150px 5%;
+    margin: 10% 5%;
     padding: 30px;
     background-color: rgba(255, 144, 14, 0.1);
     color: #424242;
     text-align: center;
-    font-size: 20px;
 }
